# Honey4u

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  plot_benchmark_compare.py  pyproject.toml  ruff.toml  run_acs_benchmark.py  run_generate_native_keys.py  run_tps_benchmark.py
.github/workflows/: ci.yml
benchmarks/: .gitignore  bench_dumbo_pool_reuse_queue.py  profile_hb_bottleneck.py  profile_protocol_bottleneck.py  sweep_dumbo_pool_reuse_limits.py
crypto/: erasure.py  generate_native_keys.py  merkle.py  threshenc.py  threshsig.py
honeybadgerbft/: binaryagreement.py  commoncoin.py  commonsubset.py  honeybadger_block.py  params.py  reliablebroadcast.py
native/: Cargo.toml
native/honey-node/: Cargo.toml
native/honey-node/src/: main.rs
native/runtime-core/: Cargo.toml
native/runtime-core/src/transport/: handle.rs  local_tcp.rs  mod.rs
native/rust/: Cargo.toml  honey_native.pyi  pyproject.toml
native/rust/src/: key_storage.rs  lib.rs
native/rust/src/archive/: api.rs  crypto_wire.rs  mod.rs  wire.rs
native/rust/src/bindings/: aes.rs  codec.rs  ecdsa.rs  error.rs  key_storage.rs  ledger.rs  local_transport.rs  merkle.rs  mod.rs  threshold_pke.rs  threshold_sig.rs  tx_pool.rs
native/rust/src/crypto/: aes.rs  crypto_error.rs  ecdsa.rs  merkle.rs  mod.rs
native/rust/src/crypto/bls/: fr.rs  g1.rs  g2.rs  interpolate.rs  mod.rs  pairing.rs  poly.rs  serial.rs
native/rust/src/crypto/threshold/: keygen.rs  mod.rs  pke.rs  sig.rs  utils.rs
network/: deterministic_simulator.py  hbbft_node.py  hbbft_runner.py
src/honey/: __init__.py  node_embed.py
src/honey/acs/: __init__.py  bkr93.py  bkr93_core.py  dumbo_acs.py  dumbo_vacs.py
src/honey/consensus/: __init__.py
src/honey/consensus/dumbo/: __init__.py  core.py
src/honey/consensus/honeybadger/: __init__.py  block.py  core.py
src/honey/crypto/: __init__.py  ecdsa.py  merkle.py  pke.py  sig.py
src/honey/data/: __init__.py  broadcast_mempool.py  pool_reuse.py
src/honey/network/: crypto_material.py  deterministic_simulator.py  embedded_transport.py  hbbft_node.py  hbbft_runner.py  local_socket_transport.py  transport.py
src/honey/runtime/: __init__.py  context.py  node_mailbox.py  router.py  rust_host.py  rust_transport.py
src/honey/subprotocols/: __init__.py  binary_agreement.py  common_coin.py  dumbo_mvba.py  provable_reliable_broadcast.py  reliable_broadcast.py
src/honey/support/: __init__.py  exceptions.py  ledger.py  logging_ext.py  messages.py  params.py  results.py  telemetry.py
tests/: conftest.py  test_acs.py  test_ba.py  test_bkr93_core.py  test_coin.py  test_dumbo.py  test_dumbo_acs.py  test_dumbo_mvba.py  test_dumbo_vacs.py  test_ecdsa_and_crypto_params.py  test_honeybadger.py  test_later_features.py  test_mempool.py  test_messages_and_tpke.py  test_network_local_nodes.py  test_pool_reuse.py  test_prbc.py  test_rbc.py  test_run_tps_benchmark.py  test_runtime_boundaries.py
