[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honey-cr"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "zfec>=1.6.0.0",
    "honey-native",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
honey-native = { path = "native/rust", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["honeybadgerbft", "crypto"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pre-commit>=3.8.0", "ruff>=0.11.4"]
