[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honey-cr"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "honey-native",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = ["native/rust"]

[tool.uv.sources]
honey-native = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/honey"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[dependency-groups]
dev = ["pre-commit>=3.8.0", "ruff>=0.11.4"]
