[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honey-cr"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "honey-native",
]

[tool.uv.workspace]
members = ["native/rust"]

[tool.uv.sources]
honey-native = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/honey"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = [
    "src/honey/data",
    "src/honey/network/crypto_material.py",
    "src/honey/network/transport.py",
    "src/honey/runtime/node_mailbox.py",
    "src/honey/support",
    "tests/test_ecdsa_and_crypto_params.py",
    "tests/test_runtime_boundaries.py",
]
exclude = [
    "benchmarks",
    "refer",
    "refer_dag",
    ".tmp*",
]

[tool.ty.terminal]
error-on-warning = true

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.4",
    "ty>=0.0.1a16",
]
