[package]
name = "honey-native"
version = "0.1.1"
edition = "2024"

[lib]
name = "honey_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10"
bincode = "1.3.3"
blst = "0.3.16"
k256 = "0.13.4"
rand = "0.8.5"
reed-solomon-erasure = "6.0.0"
sha2 = "0.10.9"
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
